[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/rooms/1_room.gd" type="Script" id=1]
[ext_resource path="res://scenes/tiles/tile_set_1.tres" type="TileSet" id=2]
[ext_resource path="res://images/white_tile.png" type="Texture" id=3]
[ext_resource path="res://scenes/door_animation.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/puzzle_description.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/answer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/sound_effect.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/music.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "white_tile.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]

[node name="1_room" type="Node2D"]
script = ExtResource( 1 )

[node name="tiles" type="Node2D" parent="."]

[node name="wall" type="TileMap" parent="tiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 64 )
format = 1
tile_data = PoolIntArray( 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0 )

[node name="barrier" type="TileMap" parent="tiles"]
modulate = Color( 0, 0, 0, 1 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 524298, 0, 0, 524305, 0, 0, 589834, 0, 0, 589841, 0, 0, 655370, 0, 0, 655377, 0, 0, 720906, 0, 0, 720913, 0, 0, 786442, 0, 0, 786449, 0, 0, 851978, 0, 0, 851985, 0, 0, 917514, 0, 0, 917521, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0 )

[node name="floor" type="TileMap" parent="tiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0 )

[node name="other_sprites" type="Node2D" parent="."]

[node name="door" parent="other_sprites" instance=ExtResource( 4 )]
position = Vector2( 464, 308 )

[node name="front_door" type="Area2D" parent="other_sprites/door"]
position = Vector2( 0, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="other_sprites/door/front_door"]
shape = SubResource( 3 )

[node name="puzzle_description" parent="other_sprites" instance=ExtResource( 5 )]
position = Vector2( 432, 304 )

[node name="answer_1" parent="other_sprites" instance=ExtResource( 6 )]

[node name="answer_2" parent="other_sprites" instance=ExtResource( 6 )]
position = Vector2( 520, 450 )

[node name="sound_effect" parent="other_sprites" instance=ExtResource( 7 )]

[node name="player" parent="." instance=ExtResource( 8 )]
pause_mode = 2
position = Vector2( 448, 416 )

[node name="music" parent="." instance=ExtResource( 9 )]
volume_db = -10.0
[connection signal="body_entered" from="other_sprites/door/front_door" to="." method="_on_front_door_body_entered"]
[connection signal="body_entered" from="other_sprites/puzzle_description" to="." method="_on_puzzle_description_player_entered"]
[connection signal="body_exited" from="other_sprites/puzzle_description" to="." method="_on_puzzle_description_body_exited"]
[connection signal="body_entered" from="other_sprites/answer_1" to="." method="_on_answer_1_body_entered"]
[connection signal="body_exited" from="other_sprites/answer_1" to="." method="_on_answer_1_body_exited"]
[connection signal="body_entered" from="other_sprites/answer_2" to="." method="_on_answer_2_body_entered"]
[connection signal="body_exited" from="other_sprites/answer_2" to="." method="_on_answer_2_body_exited"]
